Correction du bug de la visibilité des popovers

--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -20,7 +20,7 @@
     margin-top: 13px;
     border-radius: 6px;
     box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 20px;
-    opacity: 0;
+    visibility: hidden;
     z-index: 9999;
 }
 
